--- a/appveyor.yml
+++ b/appveyor.yml
@@ -71,7 +71,7 @@ branches:
   only:
     # Release tags
     - /^v\d+\.\d+\.\d+.*$/
-    - master
+    - main
 
 notifications:
   - provider: Email
